# contextual-RAG-per-chunk-vs-per-doc

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: blob.py  chunk.py  config.py  contextual.py  db.py  embeddings.py  extract.py  factory.py  hashing.py  ingest.py  litellm_util.py  llm.py  main.py  metrics.py  profile.py  repository.py  reranker.py  retrieve.py  security.py  vectorstore.py  worker.py
backend/app/routers/: batches.py  benchmark.py  documents.py  e2e.py  eval.py  query.py
backend/benchmark/: eval.py  eval_set.jsonl  eval_set_8k_eval.jsonl  matrix.py  run.py  runner.py  score_existing.py
backend/migrations/: 001_init.sql  002_eval_runs.sql  003_batches.sql  004_doc_tokens.sql  005_batch_timing.sql  008_eval_context_mode.sql  009_batch_context_mode.sql
backend/scripts/: e2e_bulk.py  gen_eval_corpus.py  gen_pdfs.py  smoke_bulk.py  smoke_eval.py  smoke_fake.py  smoke_infra.py
results/: RESULTS.md  eval8k-none-20260608-020507.json  eval8k-none-20260608-020507.md  eval8k-perchunk-20260608-020409.json  eval8k-perchunk-20260608-020409.md  eval8k-perdoc-20260608-020447.json  eval8k-perdoc-20260608-020447.md
samples/: sample_agreement.md  sample_lease.md  sample_msa.md
